# cpp-dp-2024-05-20

./: README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
Behavioral/: CMakeLists.txt
Behavioral/Chain.TheoryCode/: chain.hpp  main.cpp
Behavioral/Command.Exercise/: CMakeLists.txt
Behavioral/Command.Exercise/gtests/: CMakeLists.txt  command_tests.cpp
Behavioral/Strategy.Exercise/: main.cpp
Behavioral/TemplateMethod.TheoryCode/: template_method.hpp
Behavioral/Visitor.Exercise/: CMakeLists.txt  main.cpp
Creational/AbstractFactory.Exercise/: before.cpp
Creational/Builder.Example/: main.cpp
Creational/Builder.Example.SP/: report_builder.cpp
Creational/FactoryMethod.Example/: main.cpp  rectangle.cpp  square.cpp
Creational/FactoryMethod.Exercise1/: before.cpp  employee.cpp  employee.hpp  employee_interface.hpp  hrinfo.hpp  hrinfo_interface.hpp
Creational/FactoryMethod.Exercise2/: circle.cpp  circle.hpp  main.cpp  shape.hpp  square.cpp
Creational/FactoryMethod.Intro/: factory.hpp  main.cpp
Creational/Prototype.Exercise/: main.cpp  shape.hpp
Creational/Prototype.Intro/: main.cpp
OOP/: polymorphic_wrappers.cpp
Structural/: CMakeLists.txt
Structural/Adapter.Exercise/: text.cpp  text.hpp
Structural/Bridge.Pimpl/: bitmap.cpp  bitmap.hpp
Structural/Composite.Exercise/: main.cpp  shape_group.hpp
Structural/Decorator.Exercise/: main.cpp  starbugs_coffee.hpp
Structural/Decorator.TheoryCode/: decorator.hpp  main.cpp
Structural/Flyweight.Boost/: CMakeLists.txt  main.cpp
Structural/Proxy.TheoryCode/: main.cpp
(+5 files in other folders)
